# TaskManager

./: CMakeLists.txt  README.md  build.sh  conanfile.txt  logger.cpp  logger.h  main.cpp
common/: CMakeLists.txt  logger.cpp  logger.hpp  sysinfo_utils.cpp  sysinfo_utils.hpp
